# course-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/01_basic/: 00_index.ipynb  01_introduction.ipynb
