[tool.poetry]
name = "course-python"
version = "0.1.0"
description = ""
authors = ["zodiacfirework <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
bandit = "^1.7.4"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
ipylab = "^0.6.0"
ipympl = "^0.9.2"
ipywidgets = "^7"
isort = "^5.10.1"
jupyter-book = "^0.13.1"
jupyterlab = "^3.4.5"
jupyterlab-code-formatter = "^1.5.3"
jupyterlab-myst = "^0.1.6"
jupyterlab-widgets = "^3.0.2"
lckr-jupyterlab-variableinspector = "^3.0.9"
matplotlib = "^3.5.3"
mypy = "^0.971"
nbdev = "^2.2.8"
nbqa = "^1.4.0"
pre-commit = "^2.20.0"
pycodestyle = "^2.9.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
